--- a/courses/an20/homework/ha04.tex
+++ b/courses/an20/homework/ha04.tex
@@ -154,7 +154,7 @@ $d(x, y) = \abs{\ln x - \ln y}$.
   \]
   Da $\qty(b_n)$ eine Cauchy-Folge ist, gilt $\ln b_n \in \mathbb{R}$ somit ist auch $r \in \mathbb{R}$
   und $e^r \in M$.
-  Damit konvergieren alle Cauchy-Folgen in $\qty(M, d|_M)$ gegen einen Wert in $M$ und $\qty(M, d|_M)$
+  Damit konvergieren alle Cauchy-Folgen in $\qty(M, d)$ gegen einen Wert in $M$ und $\qty(M, d)$
   ist vollständig.
 
 \end{enumerate}
