fix: Boundary of Q

--- a/courses/an20/homework/ha04.tex
+++ b/courses/an20/homework/ha04.tex
@@ -60,7 +60,7 @@ Damit ist die Schnittmenge aller abgeschlossenen Teilmengen von $\mathbb{R}$, di
 enthalten gleich $\mathbb{R} = \overline{\mathbb{Q}}$.
 
 Der Rand von $\mathbb{Q}$, die Menge $\partial \mathbb{Q}$ ist definiert als
-$\overline{\mathbb{Q}} \setminus \mathring{\mathbb{Q}} = \mathbb{R} \setminus \mathbb{R} = \emptyset$.
+$\overline{\mathbb{Q}} \setminus \mathring{\mathbb{Q}} = \mathbb{R} \setminus \emptyset = \mathbb{R}$.
 
 \section*{Hausaufgabe 2}
 
