feat: Second task of 5th an20 homework

--- a/courses/an20/homework/ha05.tex
+++ b/courses/an20/homework/ha05.tex
@@ -42,4 +42,16 @@ besitzen.
   mit $h(x) \coloneqq x$
 \end{enumerate}
 
+\section*{Hausaufgabe 2}
+
+Untersuchen Sie die Funktionen $f \colon \mathbb{R}^2 \to \mathbb{R}$ definiert
+durch
+\[
+  f(x, y) = \begin{cases}
+    \frac{\sin(xy)}{x} & \text{für } x \ne 0 \\
+    y & \text{für } x = 0 \\
+  \end{cases}
+\]
+auf Stetigkeit.
+
 \end{document}
