feat: Third task of 5th an20 homework

--- a/courses/an20/homework/ha05.tex
+++ b/courses/an20/homework/ha05.tex
@@ -54,4 +54,17 @@ durch
 \]
 auf Stetigkeit.
 
+\section*{Hausaufgabe 3}
+
+Wir betrachten $\qty(\mathbb{R}^N, \norm{\cdot})$ mit einer beliebigen Norm
+$\norm{\cdot}$.
+Beweisen Sie folgende Aussagen: Sind $A, B \subseteq \mathbb{R}^N$ kompakte
+Mengen, dann sind die Mengen
+\[
+  A \times B = \qty{(x, y) \middle| x \in A, y \in B} \subseteq \mathbb{R}^{2N}
+  \text{ und }
+  A + B = \qty{x + y \middle| x \in A, y \in B} \subseteq \mathbb{R}^N
+\]
+ebenfalls kompakt.
+
 \end{document}
