feat: Updated page style for more content per page

--- a/courses/an20/homework/ha05.tex
+++ b/courses/an20/homework/ha05.tex
@@ -1,4 +1,5 @@
-\documentclass{article}
+\documentclass{scrreprt}
+
 \usepackage{aligned-overset}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -18,8 +19,9 @@
 
 \author{Albina Oscherowa \\ Lukas Kamratzki \\ Karsten Lehmann}
 \date{SoSe 2021}
-\title{Hausaufgabe 05 Analysis - Weiterführende Konzepte}
+\title{Hausaufgabe 05 \\Analysis - Weiterführende Konzepte}
 
+\setlength{\headheight}{26pt}
 \pagestyle{fancy}
 \fancyhf{}
 \lhead{\thetitle}
