feat: Better explanation for 2nd task of 6th an20 homework

--- a/courses/an20/homework/ha06.tex
+++ b/courses/an20/homework/ha06.tex
@@ -126,7 +126,8 @@ $B_d(a, r) \cap M = \qty{a}$.
   Sei nun $\delta = \frac{r}{2}$, dann ist die Ungleichung
   $d(a, b) < \delta$ für $b \ne a$ falsch.
   Weiterhin ist $\abs{f(a) - f(a)} = 0$.
-  Somit ist $f$ stetig in $a$ stetig.
+  Somit impliziert $d(a, b) < \delta \Rightarrow \abs{f(a) - f(b)} < \epsilon$
+  und $f$ ist in $a$ stetig.
 
 \item Die Menge $M \coloneqq \qty{\frac{1}{n} \middle| n \in \mathbb{N}}$
   sei mit der von $(\mathbb{R}, \abs{\cdot})$ induzierten Metrik versehen.
